Update templates and styling: Fix routing issues, add GitHub icon, restore Chapter Two styling

--- a/templates/about.html
+++ b/templates/about.html
@@ -23,14 +23,11 @@
             </div>
             {% endif %}
             <div class="social-links">
-                <a href="#" class="social-link" target="_blank" rel="noopener noreferrer">
+                <a href="{{ config['DFI_TWITTER_URL'] }}" class="social-link" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-twitter"></i>
                 </a>
-                <a href="#" class="social-link" target="_blank" rel="noopener noreferrer">
-                    <i class="fab fa-telegram"></i>
-                </a>
-                <a href="#" class="social-link" target="_blank" rel="noopener noreferrer">
-                    <i class="fas fa-chart-line"></i>
+                <a href="https://github.com/DarkForestAIDev" class="social-link" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-github"></i>
                 </a>
             </div>
             <nav class="main-nav">
